feat: more questions

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,16 @@ const { title } = Astro.props;
 	<body>
 		<slot />
 	</body>
+	<footer>
+		<div class="container mb-4 mt-8 min-h-12 mx-auto items-center">
+			<a href="https://linkycal.com?ref=qtay" class="my-2 block text-sm text-center">
+				powered by LinkyCal.com
+			</a>
+			<a href="https://launchfast.shop?ref=qtay" class="my-2 block text-sm text-center">
+				a LaunchFast.shop product ❤️ 
+			</a>
+		</div>
+	</footer>
 </html>
 <style is:global>
 	:root {
